# dreamnet-ircbot

./: .gitignore  README.md  dreamnet-ircbot.cabal  dreamnet-ircbot.service
src/: Common.hs  IrcState.hs  LinkStore.hs  Main.hs  ThatsWhatSheSaid.hs  YoutubeTitleFetch.hs
