name:                dreamnet-ircbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dreamnet-ircbot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dreamnet-ircbot
  hs-source-dirs:      src
  ghc-options:         -threaded
                       -Werror
                       -Weverything
                       -Wno-implicit-prelude
                       -Wno-missing-exported-signatures
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
  main-is:             Main.hs
  other-modules:       YoutubeTitleFetch
  default-language:    Haskell2010
  build-depends:       base,
                       irc-client,
                       text,
                       lens,
                       unix,
                       url,
                       aeson,
                       wreq,
                       safe,
                       mtl
